unpackaged/main/default/objects/Contact/fields/Account_s_NetSuite_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_s_NetSuite_Id__c</fullName>
    <formula>Account.NetSuite_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account&#39;s NetSuite Id</label>
    <type>Text</type>
</CustomField>