unpackaged/main/default/objects/Contact/fields/inActive__c.field-meta.xml
<CustomField>
    <fullName>inActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>inActive</label>
    <type>Checkbox</type>
</CustomField>