unpackaged/main/default/objects/Contact/fields/MC_Sync__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether contact needs to be sync to marketing cloud</description>
    <inlineHelpText>Denotes whether contact needs to be sync to marketing cloud</inlineHelpText>
    <label>MC Sync</label>
    <type>Checkbox</type>
</CustomField>