unpackaged/main/default/objects/Contact/fields/NetSuite_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Customer_Id__c</fullName>
    <formula>Account.NetSuite_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Customer Id</label>
    <type>Text</type>
</CustomField>