unpackaged/main/default/objects/Contact/fields/Pushed_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Pushed_From_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed From Opportunity</label>
    <type>Checkbox</type>
</CustomField>