unpackaged/main/default/objects/Contact/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the PG subsidiary to which the contact belongs to</description>
    <inlineHelpText>Denotes the PG subsidiary to which the contact belongs to</inlineHelpText>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>