unpackaged/main/default/objects/Contact/fields/Sync_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Sync_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync In Progress</label>
    <type>Checkbox</type>
</CustomField>