unpackaged/main/default/objects/Contact/fields/WABusinessPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>WABusinessPhoneNumber__c</fullName>
    <description>Whats App Integration</description>
    <label>WA Business Phone Number</label>
    <type>Phone</type>
</CustomField>