unpackaged/main/default/objects/Contact/fields/WACustomerName__c.field-meta.xml
<CustomField>
    <fullName>WACustomerName__c</fullName>
    <description>WhatsApp integration</description>
    <label>WA Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>