unpackaged/main/default/objects/Contact/fields/WACustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>WACustomerPhone__c</fullName>
    <description>WhatsApp integration</description>
    <label>WA Customer Phone</label>
    <type>Phone</type>
</CustomField>