unpackaged/main/default/objects/Contact/fields/WAMessageContent__c.field-meta.xml
<CustomField>
    <fullName>WAMessageContent__c</fullName>
    <description>WhatsApp integration</description>
    <label>WA Message Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>