unpackaged/main/default/objects/Contact/fields/WAMessageID__c.field-meta.xml
<CustomField>
    <fullName>WAMessageID__c</fullName>
    <description>WhatsApp integration</description>
    <externalId>true</externalId>
    <label>WA Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>