unpackaged/main/default/objects/Contact/fields/WAMessageTime__c.field-meta.xml
<CustomField>
    <fullName>WAMessageTime__c</fullName>
    <description>WhatsApp integration</description>
    <label>WA Message Time</label>
    <type>DateTime</type>
</CustomField>