unpackaged/main/default/objects/Contact/fields/WAMessageType__c.field-meta.xml
<CustomField>
    <fullName>WAMessageType__c</fullName>
    <description>WhatsApp integration</description>
    <label>WA Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>