unpackaged/main/default/objects/Contact/fields/WAParentMessage__c.field-meta.xml
<CustomField>
    <fullName>WAParentMessage__c</fullName>
    <description>WhatsApp integration</description>
    <label>WA Parent Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>