unpackaged/main/default/objects/Contact/validationRules/Email_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorMessage>Email is mandatory for a contact</errorMessage>
</ValidationRule>